# Network-Traffic-Analyzer-IDS

./: ..gitignore  CMakeLists.txt  README.md
docs/: THREAT_MODEL.md
include/: nta.h
rules/: demo.rules
src/: capture.c  dpi.c  main.c  pipeline.c  rules.c
tests/: test_dpi.c  test_rules.c
tools/: pcap_bench.c
